[package]
name = "poseidon_from_arkworks"
version = "0.1.0"
authors = ["Hossein Faghihi <mfaghihi.h@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand_chacha = "0.2.2"
rand = "0.8.3"
rand_xorshift = { version = "0.3" }

ark-groth16 = { version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-r1cs-std = { version = "0.2.0", default-features = false }
ark-relations = { version = "0.2.0", default-features = false }
ark-ed-on-bls12-381 = { version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-bls12-381 = { version = "0.2.0", default-features = false, features = [ "curve" ] }
ark-crypto-primitives = { version = "0.2.0", features = [ "r1cs" ] }
ark-ff = { version = "0.2.0", default-features = false, features = [ "asm" ] }
ark-marlin = { version = "0.2.0",  default-features = false }
ark-poly = { version = "0.2.0", default-features = false }
ark-poly-commit = { version = "0.2.0", default-features = false }
ark-std = { version = "0.2.0", default-features = false }

ark-ec = {version = "0.2.0", default-features = false}

blake2 = { version = "0.9", default-features = false }

digest = "0.9"

ark-bls12-377 = { version = "0.2.0", default-features = false, features = [ "curve" ] }
ark-ed-on-bls12-377 = { version = "0.2.0", default-features = false, features = [ "r1cs" ] }
ark-test-curves = { version = "^0.2.0", features = ["bls12_381_curve", "mnt4_753_curve"]}

[dev-dependencies]
criterion = "0.3"

#[[bench]]
#name = "benchtime"
#name = "bnchm"
#harness = false